@@ -21,7 +21,6 @@ CONFIG_FORMAT = (
         'location',
         (
             option('source_directories'),
-            option('source_directories_glob', int, required=False),
             option('repository'),
         ),
     ),
@@ -61,16 +60,15 @@ def initialize(storage_config, command):
 
 def create_archive(
     excludes_filename, verbosity, storage_config, source_directories, repository, command,
-    one_file_system=None, source_directories_glob=None
+    one_file_system=None
 ):
     '''
     Given an excludes filename (or None), a vebosity flag, a storage config dict, a space-separated
     list of source directories, a local or remote repository path, and a command to run, create an
     attic archive.
     '''
-    sources = tuple(re.split('\s+', source_directories))
-    if source_directories_glob:
-        sources = tuple(chain.from_iterable([glob(x) for x in sources]))
+    sources = re.split('\s+', source_directories)
+    sources = tuple(chain.from_iterable([glob(x) if glob(x) else [x] for x in sources]))
     exclude_flags = ('--exclude-from', excludes_filename) if excludes_filename else ()
     compression = storage_config.get('compression', None)
     compression_flags = ('--compression', compression) if compression else ()
